login function for instructor
